--- a/docs/docs/genai/eval-monitor/concepts/built-in-scorers.mdx
+++ b/docs/docs/genai/eval-monitor/concepts/built-in-scorers.mdx
@@ -3,297 +3,424 @@ import TabItem from "@theme/TabItem";
 
 # Predefined LLM Judge Scorers - Concepts
 
-Predefined LLM judge scorers provide ready-to-use evaluation implementations for common GenAI quality dimensions. Understanding the platform differences is crucial for choosing the right evaluation approach for your needs.
+MLflow 3.0 provides a comprehensive scorer framework with predefined implementations for common GenAI quality assessment. All scorers use a unified API across platforms, but some advanced scorers require additional infrastructure for full functionality.
 
-## Platform Architecture Overview
+## Scorer Framework Architecture
 
-MLflow 3.0 moved LLM evaluation to `mlflow.genai.evaluate()` with a unified scorer framework. However, the sophisticated LLM judge implementations require different infrastructure depending on your platform.
-
-<Tabs>
-<TabItem value="databricks" label="Databricks MLflow" default>
-
-### Full LLM Judge Capabilities
-
-Databricks MLflow provides complete LLM judge infrastructure with the Databricks agents framework, enabling sophisticated semantic evaluation across all quality dimensions.
-
-The platform includes comprehensive predefined scorers for general quality assessment like Safety, RelevanceToQuery, and Correctness. RAG applications benefit from specialized scorers including RetrievalRelevance, RetrievalSufficiency, and RetrievalGroundedness. Guidelines-based evaluation supports both global and per-example criteria, while tool evaluation capabilities assess ToolGroundedness and ToolSufficiency where applicable.
-
-Databricks MLflow excels with advanced LLM-powered semantic evaluation that goes beyond simple heuristics. Production monitoring automatically applies scorers to live traffic, while enterprise features provide managed datasets and team collaboration. The platform's specialized RAG evaluation capabilities and built-in safety assessment make it ideal for comprehensive quality assurance.
-
-</TabItem>
-<TabItem value="oss" label="MLflow OSS">
-
-### Framework Available, Limited LLM Judge Implementation
-
-MLflow OSS includes the complete scorer framework and class definitions, but the sophisticated LLM judge implementations require the Databricks agents framework through the `@requires_databricks_agents` decorator.
-
-OSS provides the complete scorer framework and base classes, along with reliable heuristic-based evaluation metrics. The custom scorer development framework using the `@scorer` decorator works fully in OSS, as do model type defaults with traditional metrics and basic evaluation harness functionality.
-
-However, advanced LLM judge implementations like Safety and Correctness require Databricks infrastructure. RAG-specific semantic evaluation, production monitoring services, and sophisticated guidelines-based evaluation all depend on the Databricks agents framework.
-
-For OSS users, the recommended approach focuses on heuristic metrics and custom scorer development rather than attempting to use predefined LLM judges without proper infrastructure support.
-
-</TabItem>
-</Tabs>
-
-## MLflow OSS Evaluation Strategy
-
-Since sophisticated predefined scorers require Databricks infrastructure, OSS users should focus on proven alternatives that work reliably without external dependencies.
-
-### Heuristic-Based Evaluation
-
-Traditional metrics provide reliable evaluation in OSS environments without external service dependencies:
+MLflow 3.0 moved LLM evaluation to `mlflow.genai.evaluate()` with a unified scorer framework where all scorers are instantiated as callable objects and passed to the `scorers` parameter.
 
 ```python
 import mlflow
-from mlflow.metrics import exact_match, rouge_score, flesch_kincaid_grade_level
+from mlflow.genai.scorers import Safety, RelevanceToQuery, Guidelines
 
-# Traditional metrics that work well in OSS
-oss_metrics = [
-    exact_match(),
-    rouge_score(),
-    flesch_kincaid_grade_level(),
-    mlflow.metrics.latency(),
-]
-
-results = mlflow.genai.evaluate(data=eval_data, extra_metrics=oss_metrics)
-```
-
-### Model Type Defaults
-
-OSS includes pre-configured metric suites for common scenarios that work without external dependencies:
-
-```python
-# Pre-configured metric suites for common scenarios
+# All scorers use the same instantiation pattern
 results = mlflow.genai.evaluate(
-    model=your_model,
     data=eval_data,
-    targets="ground_truth",
-    model_type="question-answering",  # Uses exact_match, toxicity, readability
+    predict_fn=my_app,
+    scorers=[
+        Safety(),  # Instantiate scorer classes
+        RelevanceToQuery(),
+        Guidelines(guidelines=["Be helpful and accurate"]),
+    ],
 )
 ```
 
-The "question-answering" model type includes exact match scoring, toxicity detection, and readability assessment. Text summarization applications can use "text-summarization" for ROUGE scores plus safety metrics, while general text generation benefits from "text" model type defaults.
+## Available Scorers by Platform
 
-### Custom Scorer Development
+<Tabs>
+<TabItem value="oss" label="MLflow OSS" default>
 
-OSS excels at custom scorer development, allowing you to encode domain-specific evaluation logic:
+### OSS-Compatible Scorers
+
+MLflow OSS includes several scorers that work without external dependencies:
+
+#### Guidelines-Based Evaluation
+
+```python
+from mlflow.genai.scorers import Guidelines, ExpectationsGuidelines
+
+# Global guidelines applied to all examples
+global_guidelines = Guidelines(
+    name="brand_voice",
+    guidelines=["Maintain professional tone", "Be helpful and accurate"],
+)
+
+# Per-example guidelines from dataset expectations
+expectations_guidelines = ExpectationsGuidelines()
+
+# Use in evaluation
+results = mlflow.genai.evaluate(
+    data=eval_data,
+    predict_fn=my_app,
+    scorers=[global_guidelines, expectations_guidelines],
+)
+```
+
+**Guidelines()** applies a consistent set of guidelines to all examples in your evaluation dataset. Specify guidelines as strings or lists that describe your quality criteria.
+
+**ExpectationsGuidelines()** evaluates each example against individual guidelines specified in the `expectations/guidelines` field of your dataset.
+
+#### Custom Scorer Development
+
+OSS excels at custom scorer development using the `@scorer` decorator:
 
 ```python
 from mlflow.genai.scorers import scorer
 
 
 @scorer
-def response_length_check(outputs) -> bool:
-    """Custom business logic that works reliably in OSS"""
-    return 50 <= len(outputs) <= 500
+def response_length_check(outputs) -> dict:
+    """Check if response length meets requirements"""
+    length = len(str(outputs))
+    return {
+        "score": 1.0 if 50 <= length <= 500 else 0.0,
+        "justification": f"Response length: {length} characters",
+    }
 
 
 @scorer
-def keyword_presence(outputs, expectations) -> float:
-    """Domain-specific evaluation logic"""
+def keyword_presence(outputs, expectations) -> dict:
+    """Check for required keywords in response"""
     required_keywords = expectations.get("required_keywords", [])
-    present_keywords = sum(1 for kw in required_keywords if kw in outputs.lower())
-    return present_keywords / len(required_keywords) if required_keywords else 1.0
+    text = str(outputs).lower()
+    present = [kw for kw in required_keywords if kw in text]
+
+    score = len(present) / len(required_keywords) if required_keywords else 1.0
+    return {
+        "score": score,
+        "justification": f"Found {len(present)}/{len(required_keywords)} keywords: {present}",
+    }
 
 
-# Use custom scorers alongside heuristic metrics
+# Combine custom scorers with built-in ones
 results = mlflow.genai.evaluate(
     data=eval_data,
-    scorers=[response_length_check, keyword_presence],
+    predict_fn=my_app,
+    scorers=[
+        Guidelines(guidelines=["Be concise and accurate"]),
+        response_length_check,
+        keyword_presence,
+    ],
+)
+```
+
+#### Integration with Traditional Metrics
+
+OSS scorers work alongside traditional MLflow metrics:
+
+```python
+from mlflow.metrics import exact_match, latency
+
+# Combine scorers with traditional metrics
+results = mlflow.genai.evaluate(
+    data=eval_data,
+    predict_fn=my_app,
+    scorers=[Guidelines(guidelines=["Be accurate"])],
     extra_metrics=[exact_match(), latency()],
 )
 ```
 
-Custom scorers enable you to encode business rules, domain expertise, and application-specific quality criteria directly into your evaluation pipeline. This approach often provides more relevant assessment than generic metrics for specialized applications.
+</TabItem>
+<TabItem value="databricks" label="Databricks MLflow">
 
-## Databricks MLflow Capabilities
+### Full Scorer Ecosystem
 
-Databricks MLflow provides the complete predefined scorer ecosystem with full LLM judge implementations that enable sophisticated semantic evaluation.
+Databricks MLflow includes all OSS scorers plus advanced LLM-powered judges that require the Databricks agents framework.
 
-### Safety Evaluation
-
-The safety scorer performs advanced content analysis that goes far beyond simple keyword filtering:
-
-```python
-from mlflow.genai.scorers import safety
-
-# Advanced content safety analysis
-feedback = safety(outputs="The capital of France is Paris.")
-# Returns comprehensive safety assessment with rationale
-```
-
-This scorer analyzes content for various harmful categories including hate speech, violence, self-harm, and inappropriate content, providing detailed rationales for its assessments.
-
-### Semantic Quality Assessment
-
-Semantic evaluation assesses meaning and relevance rather than just surface-level text characteristics:
+#### Advanced Quality Assessment
 
 ```python
-from mlflow.genai.scorers import relevance_to_query, correctness
+from mlflow.genai.scorers import Safety, RelevanceToQuery, Correctness
 
-relevance_feedback = relevance_to_query(
-    inputs={"question": "What is the capital of France?"},
-    outputs="The capital of France is Paris.",
-)
+# Advanced semantic evaluation
+safety_scorer = Safety()
+relevance_scorer = RelevanceToQuery()
+correctness_scorer = Correctness()
 
-correctness_feedback = correctness(
-    inputs={"question": "What is the capital of France?"},
-    outputs="The capital of France is Paris.",
-    expectations={"expected_response": "Paris is the capital of France"},
+results = mlflow.genai.evaluate(
+    data=eval_data,
+    predict_fn=my_app,
+    scorers=[safety_scorer, relevance_scorer, correctness_scorer],
 )
 ```
 
-These scorers understand context and meaning, enabling them to assess whether responses actually answer questions and contain factually accurate information.
+**Safety()** performs sophisticated content analysis for harmful, offensive, or toxic content using advanced LLM judges.
 
-### RAG-Specific Evaluation
+**RelevanceToQuery()** assesses whether responses directly address user queries using semantic understanding.
 
-Retrieval-Augmented Generation applications have unique evaluation needs that these specialized scorers address:
+**Correctness()** evaluates factual accuracy against expected responses or facts using LLM-powered verification.
+
+#### RAG-Specific Evaluation
 
 ```python
 from mlflow.genai.scorers import (
-    retrieval_relevance,
-    retrieval_groundedness,
-    retrieval_sufficiency,
+    RetrievalRelevance,
+    RetrievalGroundedness,
+    RetrievalSufficiency,
 )
 
-# Requires traces with RETRIEVER spans
-trace = mlflow.get_trace("your-trace-id")
-
-# Evaluate retrieval quality
-relevance_feedback = retrieval_relevance(trace=trace)
-groundedness_feedback = retrieval_groundedness(trace=trace)
-sufficiency_feedback = retrieval_sufficiency(
-    trace=trace, expectations={"expected_facts": ["Paris", "France", "capital"]}
-)
-```
-
-RetrievalRelevance assesses whether retrieved documents actually relate to the user's query. RetrievalGroundedness verifies that the model's response is supported by the retrieved context rather than hallucinated. RetrievalSufficiency determines whether the retrieved information provides enough detail to answer the question properly.
-
-### Guidelines-Based Evaluation
-
-Guidelines-based evaluation enables assessment against business rules and brand requirements:
-
-```python
-from mlflow.genai.scorers import guideline_adherence
-
-# Global guidelines for consistent evaluation
-brand_voice = guideline_adherence.with_config(
-    name="brand_compliance",
-    global_guidelines=[
-        "Maintain professional tone",
-        "Be helpful and accurate",
-        "Avoid controversial topics",
-    ],
-)
-
-feedback = brand_voice(outputs="The capital of France is Paris.")
-```
-
-This approach allows you to define evaluation criteria in natural language that LLM judges can apply consistently across your evaluation dataset.
-
-## Development Strategy Recommendations
-
-### OSS-Focused Development
-
-OSS users can build effective evaluation pipelines by emphasizing reliable metrics and custom logic:
-
-```python
-# Start with reliable OSS evaluation for rapid iteration
-development_evaluation = [
-    exact_match(),
-    response_length_check,  # Custom scorer
-    latency(),
+# RAG evaluation requires traces with RETRIEVER spans
+rag_scorers = [
+    RetrievalRelevance(),  # Are retrieved docs relevant to query?
+    RetrievalGroundedness(),  # Is response grounded in retrieved context?
+    RetrievalSufficiency(),  # Does retrieved context provide enough info?
 ]
 
-# Fast feedback loop during development
-results = mlflow.genai.evaluate(data=dev_dataset, scorers=development_evaluation)
+# Evaluate RAG application
+results = mlflow.genai.evaluate(
+    data=trace_dataset, scorers=rag_scorers  # Dataset of MLflow traces
+)
 ```
 
-This approach provides immediate feedback during development without external service dependencies or costs.
+These scorers analyze MLflow traces to evaluate different aspects of retrieval-augmented generation:
 
-### Databricks Production Evaluation
+- **RetrievalRelevance()** examines whether retrieved documents relate to the user's query
+- **RetrievalGroundedness()** verifies that responses are supported by retrieved context
+- **RetrievalSufficiency()** determines if retrieved information is adequate for answering
 
-Databricks enables comprehensive quality assessment for production deployment:
+#### Complete Evaluation Suite
 
 ```python
-# Comprehensive evaluation for production readiness
+from mlflow.genai.scorers import get_all_scorers
+
+# Get all available built-in scorers
+all_scorers = get_all_scorers()
+
+# Comprehensive evaluation
+results = mlflow.genai.evaluate(data=eval_data, predict_fn=my_app, scorers=all_scorers)
+```
+
+The `get_all_scorers()` function returns all built-in scorers for comprehensive quality assessment.
+
+</TabItem>
+</Tabs>
+
+## Working with Different Data Types
+
+Scorers have different input requirements based on what they evaluate:
+
+### Input/Output Scorers
+
+These scorers work with basic input/output pairs:
+
+```python
+data = [
+    {
+        "inputs": {"question": "What is the capital of France?"},
+        "outputs": "The capital of France is Paris.",
+        "expectations": {"guidelines": ["Be factual and concise"]},
+    }
+]
+
+scorers = [
+    Guidelines(guidelines=["Be helpful"]),  # Works with inputs/outputs
+    ExpectationsGuidelines(),  # Uses expectations/guidelines
+]
+
+# Available on both platforms
+results = mlflow.genai.evaluate(data=data, scorers=scorers)
+```
+
+### Trace-Based Scorers
+
+RAG-specific scorers require MLflow traces with retrieval information:
+
+```python
+# Get traces from instrumented RAG application
+traces = mlflow.search_traces(experiment_ids=["rag_experiment"])
+
+# Databricks-only scorers that analyze trace structure
+rag_scorers = [RetrievalRelevance(), RetrievalGroundedness(), RetrievalSufficiency()]
+
+# Requires Databricks MLflow
+results = mlflow.genai.evaluate(data=traces, scorers=rag_scorers)
+```
+
+### Expectation-Driven Scorers
+
+Some scorers require specific expectation fields in your dataset:
+
+```python
+data = [
+    {
+        "inputs": {"question": "What is 2+2?"},
+        "outputs": "2+2 equals 4",
+        "expectations": {
+            "expected_facts": ["addition", "mathematics", "4"],
+            "expected_response": "The answer is 4",
+        },
+    }
+]
+
+# Databricks-only scorer requiring expectations
+correctness_scorer = Correctness()  # Needs expected_facts or expected_response
+
+results = mlflow.genai.evaluate(data=data, scorers=[correctness_scorer])
+```
+
+## Development Strategy by Platform
+
+### OSS Development Strategy
+
+Focus on guidelines-based evaluation and custom scorer development:
+
+```python
+# OSS-optimized evaluation pipeline
+oss_evaluation = [
+    # Built-in guidelines-based evaluation
+    Guidelines(
+        guidelines=[
+            "Responses should be helpful and accurate",
+            "Maintain professional tone",
+            "Be concise but complete",
+        ]
+    ),
+    # Custom business logic
+    response_length_check,
+    keyword_presence,
+    # Domain-specific quality checks
+    technical_accuracy_checker,
+]
+
+results = mlflow.genai.evaluate(
+    data=eval_data,
+    predict_fn=my_app,
+    scorers=oss_evaluation,
+    extra_metrics=[exact_match(), latency()],
+)
+```
+
+This approach provides immediate feedback during development without external service dependencies.
+
+### Databricks Production Strategy
+
+Leverage comprehensive semantic evaluation for production readiness:
+
+```python
+# Production-ready evaluation pipeline
 production_evaluation = [
-    safety,
-    relevance_to_query,
-    correctness,
-    retrieval_groundedness,  # If using RAG
-    brand_voice,  # Custom guidelines
+    # Safety and quality assurance
+    Safety(),
+    RelevanceToQuery(),
+    Correctness(),
+    # RAG-specific evaluation (if applicable)
+    RetrievalGroundedness(),
+    RetrievalRelevance(),
+    # Custom business requirements
+    Guidelines(guidelines=["Follow brand voice guidelines"]),
+    custom_domain_scorer,
 ]
 
-# Thorough assessment before deployment
-results = mlflow.genai.evaluate(data=production_dataset, scorers=production_evaluation)
+results = mlflow.genai.evaluate(
+    data=production_dataset, predict_fn=my_app, scorers=production_evaluation
+)
 ```
 
-The sophisticated semantic evaluation capabilities help ensure applications meet high quality standards before reaching users.
+### Hybrid Development Approach
 
-### Hybrid Development Strategy
+Many teams successfully combine both platforms:
 
-Many teams successfully combine both platforms to optimize for different development phases. OSS works well for rapid iteration with heuristic metrics and custom scorers during initial development. Databricks provides comprehensive LLM evaluation and monitoring for production readiness assessment. Teams maintain shared standards through consistent evaluation datasets and quality criteria, enabling gradual migration from OSS development to Databricks production deployment.
-
-## Platform Selection Guidelines
-
-### MLflow OSS Advantages
-
-OSS makes sense when working with limited evaluation budgets or needing fast development iteration cycles. Teams with strong domain expertise can build highly effective custom scorer frameworks. The platform excels for heuristic and performance metrics while supporting internal evaluation framework development.
-
-### Databricks MLflow Advantages
-
-Databricks becomes valuable when you need sophisticated semantic evaluation or RAG-specific assessment capabilities. The platform's production monitoring with automated evaluation reduces operational overhead. Enterprise features support team collaboration and governance requirements. Customer-facing AI applications particularly benefit from comprehensive quality assurance capabilities.
-
-## Framework Compatibility
-
-The unified scorer framework ensures smooth transitions between platforms:
+1. **Development Phase**: Use OSS for rapid iteration with guidelines and custom scorers
+2. **Testing Phase**: Validate with Databricks comprehensive evaluation before deployment
+3. **Production Phase**: Deploy with Databricks monitoring and quality gates
 
 ```python
-# This pattern works on both platforms
-from mlflow.genai.scorers import scorer
+# Phase 1: OSS rapid development
+dev_scorers = [Guidelines(guidelines=["Be helpful"]), custom_scorer]
 
+# Phase 2: Databricks comprehensive testing
+test_scorers = [Safety(), RelevanceToQuery(), Correctness()] + dev_scorers
 
-@scorer
-def domain_specific_quality(outputs, expectations) -> float:
-    """Custom evaluation logic that works everywhere"""
-    # Your domain-specific evaluation logic
-    return quality_score
-
-
-# Framework handles execution regardless of platform
-results = mlflow.genai.evaluate(data=eval_data, scorers=[domain_specific_quality])
+# Phase 3: Production monitoring (Databricks)
+# Automatic evaluation on live traffic with same scorers
 ```
 
-The consistent API across platforms enables easy migration paths from OSS to Databricks. Teams can share evaluation datasets and criteria while maintaining common development patterns and best practices.
+## Understanding Scorer Requirements
 
-## Getting Started Path
+The key difference between platforms is infrastructure requirements, not API design:
 
-### For OSS Users
+```python
+# This pattern works identically on both platforms
+from mlflow.genai.scorers import Guidelines
 
-Begin with heuristic metrics to establish immediate evaluation capability. These provide reliable baselines without external dependencies. Develop custom scorers that encode your domain-specific requirements and business logic. Leverage model type defaults for common use cases like question-answering or text summarization. Focus evaluation efforts on performance metrics and business logic assessment where you have the most control and expertise.
+guidelines_scorer = Guidelines(guidelines=["Be professional"])
 
-### For Databricks Users
+# Same evaluation call on both platforms
+results = mlflow.genai.evaluate(
+    data=eval_data, predict_fn=my_app, scorers=[guidelines_scorer]
+)
 
-Start with predefined scorers to quickly establish comprehensive evaluation coverage. Add custom guidelines that reflect your brand voice and business requirements. Implement RAG evaluation if your application uses retrieval-augmented generation patterns. Set up production monitoring for continuous quality assessment without manual intervention.
+# The difference is in what scorers are available:
+# OSS: Guidelines, ExpectationsGuidelines, custom scorers
+# Databricks: All of the above + Safety, Correctness, RAG scorers, etc.
+```
 
-### Migration Strategy
+## Best Practices
 
-Establish evaluation datasets and quality criteria while using OSS for initial development. Develop custom evaluation logic using the scorer framework to capture domain-specific requirements. Validate approaches with heuristic metrics to ensure baseline quality. When ready for advanced semantic evaluation, migrate to Databricks while maintaining your existing evaluation datasets and custom scorers.
+### For All Platforms
+
+**Start Simple**: Begin with guidelines-based evaluation and custom scorers that match your specific needs.
+
+**Iterate Quickly**: Use fast, reliable scorers during development to get immediate feedback.
+
+**Document Criteria**: Clearly define quality guidelines and encode them as either Guidelines scorers or custom logic.
+
+**Validate Assumptions**: Test scorer behavior on known good and bad examples to ensure they work as expected.
+
+### OSS-Specific Tips
+
+**Leverage Custom Scorers**: The `@scorer` decorator is powerful - use it to encode domain expertise and business rules.
+
+**Combine with Traditional Metrics**: Mix scorers with metrics like `exact_match()` and `latency()` for comprehensive evaluation.
+
+**Focus on Business Logic**: Custom scorers can often provide more relevant assessment than generic metrics for specialized applications.
+
+### Databricks-Specific Tips
+
+**Use RAG Evaluation**: If building RAG applications, the specialized retrieval scorers provide invaluable insights.
+
+**Implement Safety Checks**: The Safety scorer provides sophisticated content filtering for customer-facing applications.
+
+**Set Up Monitoring**: Use the same scorers for development evaluation and production monitoring for consistency.
+
+## Migration Path
+
+The unified API design enables smooth transitions:
+
+1. **Start with OSS**: Develop evaluation datasets and custom scoring logic
+2. **Maintain Compatibility**: Use the same data formats and scorer patterns
+3. **Add Databricks Scorers**: Enhance evaluation with advanced semantic assessment
+4. **Keep Custom Logic**: Your custom scorers continue working on Databricks
+
+```python
+# This evaluation logic works on both platforms
+evaluation_config = {
+    "data": eval_dataset,
+    "predict_fn": my_application,
+    "scorers": [
+        Guidelines(guidelines=quality_guidelines),  # Works everywhere
+        custom_business_logic_scorer,  # Works everywhere
+        # Add platform-specific scorers as available:
+        # Safety(),                                # Databricks only
+        # RelevanceToQuery(),                      # Databricks only
+    ],
+}
+
+results = mlflow.genai.evaluate(**evaluation_config)
+```
 
 ## Summary
 
-MLflow 3.0 provides a unified evaluation framework with different implementation capabilities depending on your platform choice. The scorer architecture and evaluation harness work consistently across platforms, enabling shared development patterns and easy migration paths.
+MLflow 3.0 provides a unified scorer framework with consistent APIs across platforms. The key differences lie in the sophistication of available evaluation methods rather than fundamental API changes.
 
-Implementation differences become apparent in the sophistication of available evaluation methods. While OSS provides the framework foundation and excels at heuristic evaluation, Databricks offers complete LLM judge implementations with advanced semantic evaluation capabilities.
+**Choose MLflow OSS** when you need cost-effective evaluation with strong customization capabilities, rapid development iteration, or have domain expertise to build effective custom scorers.
 
-Your strategic approach should consider evaluation sophistication needs, budget constraints, and development velocity requirements. The unified framework design enables teams to start with OSS and migrate to Databricks as evaluation needs become more sophisticated, maintaining continuity in evaluation datasets and custom scoring logic.
+**Choose Databricks MLflow** when you need sophisticated semantic evaluation, RAG-specific assessment capabilities, comprehensive safety evaluation, or production monitoring with automated quality gates.
 
-Understanding these platform distinctions helps you choose the right evaluation strategy for your GenAI application development and deployment needs, whether you prioritize cost-effectiveness and customization or comprehensive semantic evaluation and production monitoring.
+The unified framework design enables teams to start with either platform and migrate as needs evolve, maintaining evaluation datasets and custom scoring logic throughout the transition.
 
 ## Next Steps
 
-- **[Custom Scorers](/genai/eval-monitor/custom-scorers)**: Build domain-specific evaluation logic that works across platforms
-- **[Evaluation Harness](/genai/eval-monitor/concepts/eval-harness)**: Learn the evaluation workflow and API patterns
-- **[Production Monitoring](/genai/eval-monitor/concepts/production-monitoring)**: Implement continuous quality assessment (Databricks)
+- **[Custom Scorers](/genai/eval-monitor/custom-scorers)**: Learn to build domain-specific evaluation logic using the `@scorer` decorator
+- **[Evaluation Harness](/genai/eval-monitor/concepts/eval-harness)**: Understand the complete evaluation workflow and configuration options
+- **[Production Monitoring](/genai/eval-monitor/concepts/production-monitoring)**: Implement continuous quality assessment (Databricks-specific features)
