--- a/docs/docs/genai/index.mdx
+++ b/docs/docs/genai/index.mdx
@@ -142,9 +142,8 @@ Explore MLflow's GenAI capabilities below to accelerate your AI development!
 
           #### Guides
 
-          [Getting Started with Tracing](/genai/tracing/quickstart)
-
-          [Production Tracing](/genai/tracing/prod-tracing)
+          - [Getting Started with Tracing](/genai/tracing/quickstart)
+          - [Production Tracing](/genai/tracing/prod-tracing)
         </div>
 
         <div class="flex-item padding-md">
