--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/optimize-prompts.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/optimize-prompts.mdx
@@ -25,7 +25,7 @@ In order to use <APILink fn="mlflow.genai.optimize_prompt" /> API, you need to p
 | Component | Definition | Example |
 |-----------|------------|---------|
 | **Registered Prompt** | A prompt registered in MLflow. See [Prompt Management](/genai/prompt-version-mgmt/prompt-registry/) for how to register a prompt. | <pre><code>mlflow.register_prompt(name="qa", template="Answer \{\{question\}\}")</code></pre> |
-| **Scorer Objects** | A set of <APILink fn="mlflow.genai.Scorer">Scorer</APILink> objects that evaluate the quality of the prompt. See <APILink fn="mlflow.genai.scorer" /> for how to define a custom scorer. | <pre><code>@scorer<br/>def exact_match(expectations: dict, outputs: dict)<br/>    return expectations == outputs</code></pre> |
+| **Scorer Objects** | A set of <APILink fn="mlflow.genai.Scorer">Scorer</APILink> objects that evaluate the quality of the prompt. See [Creating Custom Scorers](/genai/eval-monitor/custom-scorers/) for how to define a custom scorer. | <pre><code>@scorer<br/>def exact_match(expectations: dict, outputs: dict)<br/>    return expectations == outputs</code></pre> |
 | **Training(+Validation) Data** | A set of training data and optionally validation data containing inputs and expected outputs. | \[\{"inputs": \{"question": "2+2"\}, "expectations": \{"answer": "4"\}}, \{"inputs": \{"question": "2+3"\}, "expectations": \{"answer": "5"\}\}\]|
 
 ## Getting Started
@@ -39,7 +39,6 @@ $ pip install dspy>=2.6.0 mlflow>=3.1.0
 ```
 
 Then, run the following code to register the initial prompt and optimize it.
-{/* TODO: Add multi-step agent example once Prompt Registry is released in the managed MLflow. */}
 
 ```python
 import os
@@ -185,6 +184,7 @@ See <APILink fn="mlflow.genai.OptimizerConfig" /> for more details.
 The training and evaluation data for the <APILink fn="mlflow.genai.optimize_prompt" /> API can be a list of dictionaries, a pandas DataFrame, a spark DataFrame, or an <APILink fn="mlflow.genai.EvaluationDataset">mlflow.genai.EvaluationDataset</APILink>.
 In any case, the data needs to contain inputs and expectations columns that contains a dictionary of input fields and expected output fields.
 Each inputs or expectations dictionary can contain primitive types, lists, nested dictionaries, and Pydantic models. Data types are inferred from the first row of the dataset.
+See [Building MLflow Evaluation Datasets](/genai/eval-monitor/build-eval-dataset) for how to build a dataset.
 
 ```python
 # ✅ OK
