--- a/docs/docs/prompts/index.mdx
+++ b/docs/docs/prompts/index.mdx
@@ -70,7 +70,7 @@ import TabItem from "@theme/TabItem";
           # Optional: Provide a commit message to describe the changes
           commit_message="Initial commit",
           # Optional: Specify any additional metadata about the prompt version
-          version_metadata={
+          tags={
               "author": "author@example.com",
           },
           # Optional: Set tags applies to the prompt (across versions)
@@ -133,7 +133,7 @@ This creates a new prompt with the specified template text and metadata. The pro
           name="summarization-prompt",  # Specify the existing prompt name
           template=new_template,
           commit_message="Improvement",
-          version_metadata={
+          tags={
               "author": "author@example.com",
           },
       )
